--- a/Python/advanced_python/.gitignore
+++ b/Python/advanced_python/.gitignore
@@ -4,8 +4,32 @@ venv/
 # Ignore Python cache files
 __pycache__/
 *.pyc
+*.pyo
 
-# Ignore editor settings (optional)
+# Ignore Mypy cache
+.mypy_cache/
+
+# Ignore coverage reports
+.coverage
+htmlcov/
+coverage.xml
+*.cover
+.cache/
+
+# Ignore test-related files
+pytest_cache/
+
+# Ignore editor settings
 .vscode/
 .idea/
+
+# Ignore logs and temp files
 *.log
+*.tmp
+*.swp
+
+# Ignore macOS system files
+.DS_Store
+
+# Ignore Jupyter notebook checkpoints
+*.ipynb_checkpoints
